# ilumin-8

./: CMakeLists.txt  LICENSE  README.md
include/: color.h  hittable.h  hittable_list.h  interval.h  sphere.h  utilities.h
src/: main.cpp
